--- a/editor/initial_code/js_node.tmpl
+++ b/editor/initial_code/js_node.tmpl
@@ -2,7 +2,7 @@
 {% block env %}import assert from "assert";{% endblock env %}
 
 {% block start %}
-function isMajority(items: boolean[]) boolean {
+function isMajority(items: boolean[]): boolean {
     // your code here
     return true;
 }
