--- a/editor/initial_code/js_node.tmpl
+++ b/editor/initial_code/js_node.tmpl
@@ -4,7 +4,7 @@
 {% block start %}
 function isMajority(items: boolean[]): boolean {
     // your code here
-    return true;
+    return false;
 }
 {% endblock start %}
 
