--- a/editor/initial_code/python_3.tmpl
+++ b/editor/initial_code/python_3.tmpl
@@ -4,7 +4,7 @@
 {% block start %}
 def is_majority(items: list[bool]) -> bool:
     # your code here
-    return True
+    return False
 {% endblock start %}
 
 {% block example %}
@@ -12,6 +12,7 @@ print('Example:')
 print(is_majority([True, True, False, True, False]))
 {% endblock %}
 
+# These "asserts" are used for self-checking
 {% block tests %}
 {% for t in tests %}
 assert {% block call %}is_majority({{t.input|p_args}}){% endblock %} == {% block result %}{{t.answer|p}}{% endblock %}{% endfor %}
